# differentiable-model-calibration

./: .gitignore  README.md  slides.md  style.css  uno.config.ts
.github/workflows/: deploy.yml
code/: .gitignore  1_jax_intro.ipynb  1_jax_intro.py  2_lotka_volterra.ipynb  README.md  pyproject.toml  visual_configs.yaml
components/: ContentCard.vue  GOLMcmBackground.vue  GameOfLifeBackground.vue  ItemList.vue  LorenzBackground.vue  SpinnerBackground.vue  SpirographBackground.vue
presentation/: .gitignore  package.json  pnpm-lock.yaml  slides.md
presentation/components/: AutoReloadIframe.vue  BlurBox.vue  BouncingBallsBackground.vue  DynamicalSystemDiagram.vue  GOLMcmBackground.vue  GameOfLifeBackground.vue  IconCard.vue  InfoCard.vue  LorenzBackground.vue  LotkaVolterraBackground.vue  MokaPotBackground.vue  NeuralNetworkDiagram.vue  PlanetarySystemBackground.vue  RestartOnEnter.vue  SpinnerBackground.vue  SpirographBackground.vue  WireframeShapesBackground.vue
presentation/public/figures/: fit_comparison.html  training_loss.html
presentation/styles/: index.css
setup/: shiki.ts
